--- a/.github/workflows/ci-release-governance.yml
+++ b/.github/workflows/ci-release-governance.yml
@@ -12,6 +12,8 @@ permissions:
 
 jobs:
 
+
+  
   # ============================================================
   #  LAYER 1 — Application Testing + Allure Report
   # ============================================================
@@ -186,6 +188,7 @@ jobs:
           force_orphan: true
 
 
+
   # ============================================================
   #  LAYER 2 — Security Testing
   # ============================================================
@@ -228,6 +231,7 @@ jobs:
           path: security-testing/reports/
 
 
+
   # ============================================================
   #  LAYER 3 — SBOM
   # ============================================================
@@ -260,6 +264,7 @@ jobs:
         with:
           name: sbom-reports
           path: sbom-testing/reports/
+
 
 
   # ============================================================
@@ -379,6 +384,8 @@ jobs:
             kpqe-platform-testing/kpqe-release-decision.txt
             kpqe-platform-testing/reports/
 
+
+
   # ============================================================
   #  LAYER 5 — Release Dashboard
   # ============================================================
@@ -407,11 +414,6 @@ jobs:
         with:
           path: artifacts
 
-      - name: Debug - list artifacts
-        run: |
-          echo "===== ARTIFACTS DOWNLOADED ====="
-          ls -R artifacts || true
-
       - name: Prepare dashboard inputs
         run: |
           mkdir -p security-testing/reports
@@ -419,35 +421,60 @@ jobs:
           mkdir -p kpqe-platform-testing/reports
           mkdir -p application-testing/target/site/allure-report
 
-          # Allure
           cp -r artifacts/allure-report/* application-testing/target/site/allure-report/ || true
-
-          # Security
           cp -r artifacts/security-reports/* security-testing/reports/ || true
-
-          # SBOM
           cp -r artifacts/sbom-reports/* sbom-testing/reports/ || true
-
-          # KPQE
           cp -r artifacts/kpqe-platform-reports/* kpqe-platform-testing/ || true
 
       - name: Generate dashboard
         run: |
           python release-dashboard/generate-dashboard.py
 
-      - name: Debug - dashboard output
+      # ✅ GUARANTEED FIX: Ensure output folder + ensure release-summary.json exists
+      - name: Normalize dashboard output
         run: |
-          echo "===== DASHBOARD OUTPUT ====="
-          ls -R release-dashboard || true
-          ls -R release-dashboard/output || true
+          mkdir -p release-dashboard/output
 
-      # ✅ STRONG UPLOAD (upload full output folder)
+          echo "===== Searching for dashboard files ====="
+          find release-dashboard -maxdepth 3 -type f || true
+
+          # If script created index.html in root
+          if [ -f "release-dashboard/index.html" ]; then
+            cp release-dashboard/index.html release-dashboard/output/index.html
+          fi
+
+          # If script created release-summary.json in root
+          if [ -f "release-dashboard/release-summary.json" ]; then
+            cp release-dashboard/release-summary.json release-dashboard/output/release-summary.json
+          fi
+
+          # If already created inside output
+          if [ -f "release-dashboard/output/release-summary.json" ]; then
+            echo "✅ release-summary.json exists inside output"
+          else
+            echo "❌ release-summary.json STILL missing"
+            exit 1
+          fi
+
+          if [ -f "release-dashboard/output/index.html" ]; then
+            echo "✅ index.html exists inside output"
+          else
+            echo "❌ index.html missing"
+            exit 1
+          fi
+
+          echo "===== FINAL OUTPUT ====="
+          ls -la release-dashboard/output
+
       - name: Upload Release Dashboard Artifact
         uses: actions/upload-artifact@v4
         if: always()
         with:
           name: release-dashboard
           path: release-dashboard/output/
+
+
+
 
 
   # ============================================================
@@ -473,7 +500,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r release-decision/requirements.txt
 
-      # ✅ GUARANTEED FIX: download ALL artifacts (no name)
       - name: Download all workflow artifacts
         uses: actions/download-artifact@v4
         with:
@@ -488,20 +514,14 @@ jobs:
         run: |
           mkdir -p release-decision/input
 
-          # Path 1 (most common)
-          if [ -f "all-artifacts/release-dashboard/release-summary.json" ]; then
-            cp all-artifacts/release-dashboard/release-summary.json release-decision/input/release-summary.json
-
-          # Path 2 (in case output folder exists inside artifact)
-          elif [ -f "all-artifacts/release-dashboard/output/release-summary.json" ]; then
-            cp all-artifacts/release-dashboard/output/release-summary.json release-decision/input/release-summary.json
-
-          else
-            echo "❌ release-summary.json NOT FOUND in any artifact path"
-            echo "===== Searching file ====="
+          if [ ! -f "all-artifacts/release-dashboard/release-summary.json" ]; then
+            echo "❌ release-summary.json missing inside release-dashboard artifact"
+            echo "===== Searching ====="
             find all-artifacts -name "release-summary.json" || true
             exit 1
           fi
+
+          cp all-artifacts/release-dashboard/release-summary.json release-decision/input/release-summary.json
 
           echo "✅ Copied release-summary.json successfully"
           ls -la release-decision/input
@@ -510,16 +530,10 @@ jobs:
         run: |
           python release-decision/final-decision.py
 
-      - name: Debug - decision output
-        if: always()
-        run: |
-          echo "===== FINAL DECISION OUTPUT ====="
-          ls -R release-decision/output || true
-          cat release-decision/output/* || true
-
       - name: Upload Final Decision Artifact
         uses: actions/upload-artifact@v4
         if: always()
         with:
           name: final-release-decision
           path: release-decision/output/
+
